# libpng-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
AndroidTests/: .gitignore  settings.gradle.kts
AndroidTests/app/: .gitignore  build.gradle.kts
AndroidTests/app/src/androidTest/java/com/alambov/androidtests/: ExampleInstrumentedTest.kt
AndroidTests/app/src/main/: AndroidManifest.xml
AndroidTests/app/src/main/cpp/: CMakeLists.txt  binding.h  native-lib.cpp
AndroidTests/app/src/main/java/com/alambov/androidtests/: MainActivity.kt
AndroidTests/app/src/test/java/com/alambov/androidtests/: ExampleUnitTest.kt
AndroidTests/gradle/: libs.versions.toml
AndroidTests/gradle/wrapper/: gradle-wrapper.properties
IosTests/: Package.swift
IosTests/Sources/Binding/: binding.c
IosTests/Sources/Binding/include/: binding.h
IosTests/Sources/ImageProvider/: ImageProvider.swift
IosTests/Tests/IosTests/: IosTests.swift
bindgen-helper/src/: main.rs
libpng-src/: Cargo.toml  README.md
libpng-src/src/: lib.rs  tests.rs
libpng-src/tests/: test_compile_linux_host.rs  test_compile_macos_host.rs  test_compile_windows_host.rs
libpng-vendored-sys/: Cargo.toml  README.md
libpng-vendored-sys/src/: c_macro_helpers.rs  lib.rs
libpng-vendored-sys/tests/: test_simplified_api.rs
mobile-test-helper/: Cargo.toml
mobile-test-helper/src/: lib.rs
