[package]
name = "libpng-vendored-sys"
version = "0.1.2"
authors = ["Alexandr Lambov <alex.lambov.md@gmail.com>"]
edition = "2021"
description = "Helper package for vendoring 'libpng' as a static library with rudimentary FFI bindings."
license = "MIT OR Apache-2.0"
repository = "https://github.com/alambov-md/libpng-rs"
links = "png"

[features]
default = ["link-libz"]
link-libz = ["dep:libz-sys"]
link-libz-static = ["libz-sys/static"]

[dependencies]
libc = { workspace = true }
libz-sys = { version = "=1.1.16", optional = true }

[build-dependencies]
libpng-src = { workspace = true }